// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WhileStatement simple-while 1`] = `
"; ModuleID = 'while-statement/simple-while.ts'
source_filename = \\"while-statement/simple-while.ts\\"
target datalayout = \\"e-m:e-p:32:32-i64:64-n32:64-S128\\"
target triple = \\"wasm32-unknown-unknown\\"

%class.Math = type { i1 }

@Array_name = private unnamed_addr constant [6 x i8] c\\"Array\\\\00\\"
@Array_type_descriptor = private constant { [6 x i8]* } { [6 x i8]* @Array_name }
@Math_name = private unnamed_addr constant [5 x i8] c\\"Math\\\\00\\"
@Math_type_descriptor = private constant { [5 x i8]* } { [5 x i8]* @Math_name }
@Math_object = private constant %class.Math zeroinitializer
@Math_ptr = private constant %class.Math* @Math_object

define void @_simpleWhile(i32 %arg) {
entry:
  %arg.addr = alloca i32, align 4
  store i32 %arg, i32* %arg.addr, align 4
  br label %while.cond

while.cond:                                       ; preds = %while.body, %entry
  %arg.addr1 = load i32, i32* %arg.addr, align 4
  %arg.addr1AsBool = icmp ne i32 %arg.addr1, 0
  br i1 %arg.addr1AsBool, label %while.body, label %while.end

while.body:                                       ; preds = %while.cond
  %arg.addr2 = load i32, i32* %arg.addr, align 4
  %sub = sub i32 %arg.addr2, 1
  store i32 %sub, i32* %arg.addr, align 4
  br label %while.cond

while.end:                                        ; preds = %while.cond
  ret void
}
"
`;

exports[`WhileStatement while-break 1`] = `
"; ModuleID = 'while-statement/while-break.ts'
source_filename = \\"while-statement/while-break.ts\\"
target datalayout = \\"e-m:e-p:32:32-i64:64-n32:64-S128\\"
target triple = \\"wasm32-unknown-unknown\\"

%class.Math = type { i1 }

@Array_name = private unnamed_addr constant [6 x i8] c\\"Array\\\\00\\"
@Array_type_descriptor = private constant { [6 x i8]* } { [6 x i8]* @Array_name }
@Math_name = private unnamed_addr constant [5 x i8] c\\"Math\\\\00\\"
@Math_type_descriptor = private constant { [5 x i8]* } { [5 x i8]* @Math_name }
@Math_object = private constant %class.Math zeroinitializer
@Math_ptr = private constant %class.Math* @Math_object

define i32 @_whileBreak() {
entry:
  %i = alloca i32, align 4
  %return = alloca i32, align 4
  store i32 0, i32* %i, align 4
  br label %while.cond

while.cond:                                       ; preds = %if.end, %entry
  %i1 = load i32, i32* %i, align 4
  %cmpLT = icmp slt i32 %i1, 6
  br i1 %cmpLT, label %while.body, label %while.end

while.body:                                       ; preds = %while.cond
  %i2 = load i32, i32* %i, align 4
  %cmpEQ = icmp eq i32 %i2, 3
  br i1 %cmpEQ, label %if.then, label %if.end

if.then:                                          ; preds = %while.body
  br label %while.end

if.end:                                           ; preds = %while.body
  %i3 = load i32, i32* %i, align 4
  %add = add i32 %i3, 1
  store i32 %add, i32* %i, align 4
  br label %while.cond

while.end:                                        ; preds = %if.then, %while.cond
  %i4 = load i32, i32* %i, align 4
  store i32 %i4, i32* %return, align 4
  br label %returnBlock

returnBlock:                                      ; preds = %while.end
  %return5 = load i32, i32* %return, align 4
  ret i32 %return5
}
"
`;

exports[`WhileStatement while-break-labeled 1`] = `
"; ModuleID = 'while-statement/while-break-labeled.ts'
source_filename = \\"while-statement/while-break-labeled.ts\\"
target datalayout = \\"e-m:e-p:32:32-i64:64-n32:64-S128\\"
target triple = \\"wasm32-unknown-unknown\\"

%class.Math = type { i1 }

@Array_name = private unnamed_addr constant [6 x i8] c\\"Array\\\\00\\"
@Array_type_descriptor = private constant { [6 x i8]* } { [6 x i8]* @Array_name }
@Math_name = private unnamed_addr constant [5 x i8] c\\"Math\\\\00\\"
@Math_type_descriptor = private constant { [5 x i8]* } { [5 x i8]* @Math_name }
@Math_object = private constant %class.Math zeroinitializer
@Math_ptr = private constant %class.Math* @Math_object

define void @_whileBreakLabeled() {
entry:
  %j = alloca i32, align 4
  %i = alloca i32, align 4
  store i32 0, i32* %i, align 4
  store i32 8, i32* %j, align 4
  br label %while.cond

while.cond:                                       ; preds = %while.end, %entry
  %i1 = load i32, i32* %i, align 4
  %cmpLT = icmp slt i32 %i1, 4
  br i1 %cmpLT, label %while.body, label %while.end8

while.body:                                       ; preds = %while.cond
  %i2 = load i32, i32* %i, align 4
  %add = add i32 %i2, 1
  store i32 %add, i32* %i, align 4
  br label %while.cond3

while.cond3:                                      ; preds = %if.end, %while.body
  %j4 = load i32, i32* %j, align 4
  %cmpGT = icmp sgt i32 %j4, 4
  br i1 %cmpGT, label %while.body5, label %while.end

while.body5:                                      ; preds = %while.cond3
  %j6 = load i32, i32* %j, align 4
  %sub = sub i32 %j6, 1
  store i32 %sub, i32* %j, align 4
  %j7 = load i32, i32* %j, align 4
  %srem = srem i32 %j7, 2
  %cmpEQ = icmp eq i32 %srem, 0
  br i1 %cmpEQ, label %if.then, label %if.end

if.then:                                          ; preds = %while.body5
  br label %while.end8

if.end:                                           ; preds = %while.body5
  br label %while.cond3

while.end:                                        ; preds = %while.cond3
  br label %while.cond

while.end8:                                       ; preds = %if.then, %while.cond
  ret void
}
"
`;

exports[`WhileStatement while-continue 1`] = `
"; ModuleID = 'while-statement/while-continue.ts'
source_filename = \\"while-statement/while-continue.ts\\"
target datalayout = \\"e-m:e-p:32:32-i64:64-n32:64-S128\\"
target triple = \\"wasm32-unknown-unknown\\"

%class.Math = type { i1 }

@Array_name = private unnamed_addr constant [6 x i8] c\\"Array\\\\00\\"
@Array_type_descriptor = private constant { [6 x i8]* } { [6 x i8]* @Array_name }
@Math_name = private unnamed_addr constant [5 x i8] c\\"Math\\\\00\\"
@Math_type_descriptor = private constant { [5 x i8]* } { [5 x i8]* @Math_name }
@Math_object = private constant %class.Math zeroinitializer
@Math_ptr = private constant %class.Math* @Math_object

define void @_whileContinue() {
entry:
  %n = alloca i32, align 4
  %i = alloca i32, align 4
  store i32 0, i32* %i, align 4
  store i32 0, i32* %n, align 4
  br label %while.cond

while.cond:                                       ; preds = %if.end, %if.then, %entry
  %i1 = load i32, i32* %i, align 4
  %cmpLT = icmp slt i32 %i1, 5
  br i1 %cmpLT, label %while.body, label %while.end

while.body:                                       ; preds = %while.cond
  %i2 = load i32, i32* %i, align 4
  %add = add i32 %i2, 1
  store i32 %add, i32* %i, align 4
  %i3 = load i32, i32* %i, align 4
  %cmpEQ = icmp eq i32 %i3, 3
  br i1 %cmpEQ, label %if.then, label %if.end

if.then:                                          ; preds = %while.body
  br label %while.cond

if.end:                                           ; preds = %while.body
  %n4 = load i32, i32* %n, align 4
  %i5 = load i32, i32* %i, align 4
  %add6 = add i32 %n4, %i5
  store i32 %add6, i32* %n, align 4
  br label %while.cond

while.end:                                        ; preds = %while.cond
  ret void
}
"
`;

exports[`WhileStatement while-continue-labeled 1`] = `
"; ModuleID = 'while-statement/while-continue-labeled.ts'
source_filename = \\"while-statement/while-continue-labeled.ts\\"
target datalayout = \\"e-m:e-p:32:32-i64:64-n32:64-S128\\"
target triple = \\"wasm32-unknown-unknown\\"

%class.Math = type { i1 }

@Array_name = private unnamed_addr constant [6 x i8] c\\"Array\\\\00\\"
@Array_type_descriptor = private constant { [6 x i8]* } { [6 x i8]* @Array_name }
@Math_name = private unnamed_addr constant [5 x i8] c\\"Math\\\\00\\"
@Math_type_descriptor = private constant { [5 x i8]* } { [5 x i8]* @Math_name }
@Math_object = private constant %class.Math zeroinitializer
@Math_ptr = private constant %class.Math* @Math_object

define void @_whileContinueLabeled() {
entry:
  %j = alloca i32, align 4
  %i = alloca i32, align 4
  store i32 0, i32* %i, align 4
  store i32 8, i32* %j, align 4
  br label %while.cond

while.cond:                                       ; preds = %while.end, %if.then, %entry
  %i1 = load i32, i32* %i, align 4
  %cmpLT = icmp slt i32 %i1, 4
  br i1 %cmpLT, label %while.body, label %while.end8

while.body:                                       ; preds = %while.cond
  %i2 = load i32, i32* %i, align 4
  %add = add i32 %i2, 1
  store i32 %add, i32* %i, align 4
  br label %while.cond3

while.cond3:                                      ; preds = %if.end, %while.body
  %j4 = load i32, i32* %j, align 4
  %cmpGT = icmp sgt i32 %j4, 4
  br i1 %cmpGT, label %while.body5, label %while.end

while.body5:                                      ; preds = %while.cond3
  %j6 = load i32, i32* %j, align 4
  %sub = sub i32 %j6, 1
  store i32 %sub, i32* %j, align 4
  %j7 = load i32, i32* %j, align 4
  %srem = srem i32 %j7, 2
  %cmpEQ = icmp eq i32 %srem, 0
  br i1 %cmpEQ, label %if.then, label %if.end

if.then:                                          ; preds = %while.body5
  br label %while.cond

if.end:                                           ; preds = %while.body5
  br label %while.cond3

while.end:                                        ; preds = %while.cond3
  br label %while.cond

while.end8:                                       ; preds = %while.cond
  ret void
}
"
`;

exports[`WhileStatement while-with-return-as-last-statement 1`] = `
"; ModuleID = 'while-statement/while-with-return-as-last-statement.ts'
source_filename = \\"while-statement/while-with-return-as-last-statement.ts\\"
target datalayout = \\"e-m:e-p:32:32-i64:64-n32:64-S128\\"
target triple = \\"wasm32-unknown-unknown\\"

%class.Math = type { i1 }

@Array_name = private unnamed_addr constant [6 x i8] c\\"Array\\\\00\\"
@Array_type_descriptor = private constant { [6 x i8]* } { [6 x i8]* @Array_name }
@Math_name = private unnamed_addr constant [5 x i8] c\\"Math\\\\00\\"
@Math_type_descriptor = private constant { [5 x i8]* } { [5 x i8]* @Math_name }
@Math_object = private constant %class.Math zeroinitializer
@Math_ptr = private constant %class.Math* @Math_object

define i32 @_whileWithReturnAsLastStatement(i32 %arg) {
entry:
  %arg.addr = alloca i32, align 4
  %return = alloca i32, align 4
  store i32 %arg, i32* %arg.addr, align 4
  br label %while.cond

while.cond:                                       ; preds = %entry
  %arg.addr1 = load i32, i32* %arg.addr, align 4
  %arg.addr1AsBool = icmp ne i32 %arg.addr1, 0
  br i1 %arg.addr1AsBool, label %while.body, label %while.end

while.body:                                       ; preds = %while.cond
  store i32 10, i32* %return, align 4
  br label %returnBlock

while.end:                                        ; preds = %while.cond
  store i32 0, i32* %return, align 4
  br label %returnBlock

returnBlock:                                      ; preds = %while.end, %while.body
  %return2 = load i32, i32* %return, align 4
  ret i32 %return2
}
"
`;
